packages/mermaid-zenuml/zenuml/core/src-out/g4/gen/sequenceParser.java
// Generated from /Users/pengxiao/workspaces/zenuml/zenuml-core/src/g4/sequenceParser.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class sequenceParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TITLE=1, COL=2, SOPEN=3, SCLOSE=4, ARROW=5, COLOR=6, OR=7, AND=8, EQ=9, 
		NEQ=10, GT=11, LT=12, GTEQ=13, LTEQ=14, PLUS=15, MINUS=16, MULT=17, DIV=18, 
		MOD=19, POW=20, NOT=21, SCOL=22, COMMA=23, ASSIGN=24, OPAR=25, CPAR=26, 
		OBRACE=27, CBRACE=28, TRUE=29, FALSE=30, NIL=31, IF=32, ELSE=33, WHILE=34, 
		RETURN=35, NEW=36, PAR=37, GROUP=38, OPT=39, AS=40, TRY=41, CATCH=42, 
		FINALLY=43, IN=44, STARTER_LXR=45, ANNOTATION_RET=46, ANNOTATION=47, DOT=48, 
		ID=49, INT=50, FLOAT=51, STRING=52, CR=53, SPACE=54, COMMENT=55, OTHER=56, 
		EVENT_PAYLOAD_LXR=57, EVENT_END=58, WS=59, TITLE_CONTENT=60, TITLE_END=61;
	public static final int
		RULE_prog = 0, RULE_title = 1, RULE_head = 2, RULE_group = 3, RULE_starterExp = 4, 
		RULE_starter = 5, RULE_participant = 6, RULE_stereotype = 7, RULE_label = 8, 
		RULE_participantType = 9, RULE_name = 10, RULE_width = 11, RULE_block = 12, 
		RULE_ret = 13, RULE_divider = 14, RULE_stat = 15, RULE_par = 16, RULE_opt = 17, 
		RULE_creation = 18, RULE_creationBody = 19, RULE_message = 20, RULE_messageBody = 21, 
		RULE_func = 22, RULE_from = 23, RULE_to = 24, RULE_signature = 25, RULE_invocation = 26, 
		RULE_assignment = 27, RULE_asyncMessage = 28, RULE_content = 29, RULE_construct = 30, 
		RULE_type = 31, RULE_assignee = 32, RULE_methodName = 33, RULE_parameters = 34, 
		RULE_parameter = 35, RULE_declaration = 36, RULE_tcf = 37, RULE_tryBlock = 38, 
		RULE_catchBlock = 39, RULE_finallyBlock = 40, RULE_alt = 41, RULE_ifBlock = 42, 
		RULE_elseIfBlock = 43, RULE_elseBlock = 44, RULE_braceBlock = 45, RULE_loop = 46, 
		RULE_expr = 47, RULE_atom = 48, RULE_parExpr = 49, RULE_condition = 50, 
		RULE_inExpr = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "title", "head", "group", "starterExp", "starter", "participant", 
			"stereotype", "label", "participantType", "name", "width", "block", "ret", 
			"divider", "stat", "par", "opt", "creation", "creationBody", "message", 
			"messageBody", "func", "from", "to", "signature", "invocation", "assignment", 
			"asyncMessage", "content", "construct", "type", "assignee", "methodName", 
			"parameters", "parameter", "declaration", "tcf", "tryBlock", "catchBlock", 
			"finallyBlock", "alt", "ifBlock", "elseIfBlock", "elseBlock", "braceBlock", 
			"loop", "expr", "atom", "parExpr", "condition", "inExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'title'", "':'", "'<<'", "'>>'", "'->'", null, "'||'", "'&&'", 
			"'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'^'", "'!'", "';'", "','", "'='", "'('", "')'", "'{'", "'}'", 
			"'true'", "'false'", "'nil'", "'if'", "'else'", null, "'return'", "'new'", 
			"'par'", "'group'", "'opt'", "'as'", "'try'", "'catch'", "'finally'", 
			"'in'", null, null, null, "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TITLE", "COL", "SOPEN", "SCLOSE", "ARROW", "COLOR", "OR", "AND", 
			"EQ", "NEQ", "GT", "LT", "GTEQ", "LTEQ", "PLUS", "MINUS", "MULT", "DIV", 
			"MOD", "POW", "NOT", "SCOL", "COMMA", "ASSIGN", "OPAR", "CPAR", "OBRACE", 
			"CBRACE", "TRUE", "FALSE", "NIL", "IF", "ELSE", "WHILE", "RETURN", "NEW", 
			"PAR", "GROUP", "OPT", "AS", "TRY", "CATCH", "FINALLY", "IN", "STARTER_LXR", 
			"ANNOTATION_RET", "ANNOTATION", "DOT", "ID", "INT", "FLOAT", "STRING", 
			"CR", "SPACE", "COMMENT", "OTHER", "EVENT_PAYLOAD_LXR", "EVENT_END", 
			"WS", "TITLE_CONTENT", "TITLE_END"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "sequenceParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public sequenceParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(sequenceParser.EOF, 0); }
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public HeadContext head() {
			return getRuleContext(HeadContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sequenceParserVisitor ) return ((sequenceParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TITLE) {
					{
					setState(105);
					title();
					}
				}

				setState(108);
				match(EOF);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TITLE) {
					{
					setState(109);
					title();
					}
				}

				setState(112);
				head();
				setState(113);
				match(EOF);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TITLE) {
					{
					setState(115);
					title();
					}
				}

				setState(119);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(118);
					head();
					}
					break;
				}
				setState(121);
				block();
				setState(122);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public TerminalNode TITLE() { return getToken(sequenceParser.TITLE, 0); }
		public TerminalNode TITLE_CONTENT() { return getToken(sequenceParser.TITLE_CONTENT, 0); }
		public TerminalNode TITLE_END() { return getToken(sequenceParser.TITLE_END, 0); }
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).exitTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sequenceParserVisitor ) return ((sequenceParserVisitor<? extends T>)visitor).visitTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_title);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(TITLE);
			setState(127);
			match(TITLE_CONTENT);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TITLE_END) {
				{
				setState(128);
				match(TITLE_END);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadContext extends ParserRuleContext {
		public List<GroupContext> group() {
			return getRuleContexts(GroupContext.class);
		}
		public GroupContext group(int i) {
			return getRuleContext(GroupContext.class,i);
		}
		public List<ParticipantContext> participant() {
			return getRuleContexts(ParticipantContext.class);
		}
		public ParticipantContext participant(int i) {
			return getRuleContext(ParticipantContext.class,i);
		}
		public StarterExpContext starterExp() {
			return getRuleContext(StarterExpContext.class,0);
		}
		public HeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_head; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).enterHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).exitHead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sequenceParserVisitor ) return ((sequenceParserVisitor<? extends T>)visitor).visitHead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadContext head() throws RecognitionException {
		HeadContext _localctx = new HeadContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_head);
		try {
			int _alt;
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						setState(133);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case GROUP:
							{
							setState(131);
							group();
							}
							break;
						case SOPEN:
						case LT:
						case ANNOTATION:
						case ID:
						case STRING:
							{
							setState(132);
							participant();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(135); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						setState(139);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case GROUP:
							{
							setState(137);
							group();
							}
							break;
						case SOPEN:
						case LT:
						case ANNOTATION:
						case ID:
						case STRING:
							{
							setState(138);
							participant();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						} 
					}
					setState(143);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				setState(144);
				starterExp();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupContext extends ParserRuleContext {
		public TerminalNode GROUP() { return getToken(sequenceParser.GROUP, 0); }
		public TerminalNode OBRACE() { return getToken(sequenceParser.OBRACE, 0); }
		public TerminalNode CBRACE() { return getToken(sequenceParser.CBRACE, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<ParticipantContext> participant() {
			return getRuleContexts(ParticipantContext.class);
		}
		public ParticipantContext participant(int i) {
			return getRuleContext(ParticipantContext.class,i);
		}
		public GroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_group; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).enterGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).exitGroup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sequenceParserVisitor ) return ((sequenceParserVisitor<? extends T>)visitor).visitGroup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GroupContext group() throws RecognitionException {
		GroupContext _localctx = new GroupContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_group);
		int _la;
		try {
			setState(168);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(GROUP);
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID || _la==STRING) {
					{
					setState(148);
					name();
					}
				}

				setState(151);
				match(OBRACE);
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SOPEN) | (1L << LT) | (1L << ANNOTATION) | (1L << ID) | (1L << STRING))) != 0)) {
					{
					{
					setState(152);
					participant();
					}
					}
					setState(157);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(158);
				match(CBRACE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				match(GROUP);
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID || _la==STRING) {
					{
					setState(160);
					name();
					}
				}

				setState(163);
				match(OBRACE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(164);
				match(GROUP);
				setState(166);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(165);
					name();
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StarterExpContext extends ParserRuleContext {
		public TerminalNode STARTER_LXR() { return getToken(sequenceParser.STARTER_LXR, 0); }
		public TerminalNode OPAR() { return getToken(sequenceParser.OPAR, 0); }
		public TerminalNode CPAR() { return getToken(sequenceParser.CPAR, 0); }
		public StarterContext starter() {
			return getRuleContext(StarterContext.class,0);
		}
		public TerminalNode ANNOTATION() { return getToken(sequenceParser.ANNOTATION, 0); }
		public StarterExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_starterExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).enterStarterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).exitStarterExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sequenceParserVisitor ) return ((sequenceParserVisitor<? extends T>)visitor).visitStarterExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StarterExpContext starterExp() throws RecognitionException {
		StarterExpContext _localctx = new StarterExpContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_starterExp);
		int _la;
		try {
			setState(179);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STARTER_LXR:
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				match(STARTER_LXR);
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPAR) {
					{
					setState(171);
					match(OPAR);
					setState(173);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==ID || _la==STRING) {
						{
						setState(172);
						starter();
						}
					}

					setState(175);
					match(CPAR);
					}
				}

				}
				break;
			case ANNOTATION:
				enterOuterAlt(_localctx, 2);
				{
				setState(178);
				match(ANNOTATION);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StarterContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(sequenceParser.ID, 0); }
		public TerminalNode STRING() { return getToken(sequenceParser.STRING, 0); }
		public StarterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_starter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).enterStarter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).exitStarter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sequenceParserVisitor ) return ((sequenceParserVisitor<? extends T>)visitor).visitStarter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StarterContext starter() throws RecognitionException {
		StarterContext _localctx = new StarterContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_starter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParticipantContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ParticipantTypeContext participantType() {
			return getRuleContext(ParticipantTypeContext.class,0);
		}
		public StereotypeContext stereotype() {
			return getRuleContext(StereotypeContext.class,0);
		}
		public WidthContext width() {
			return getRuleContext(WidthContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public TerminalNode COLOR() { return getToken(sequenceParser.COLOR, 0); }
		public ParticipantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_participant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).enterParticipant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).exitParticipant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sequenceParserVisitor ) return ((sequenceParserVisitor<? extends T>)visitor).visitParticipant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParticipantContext participant() throws RecognitionException {
		ParticipantContext _localctx = new ParticipantContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_participant);
		int _la;
		try {
			setState(201);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,24,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ANNOTATION) {
					{
					setState(183);
					participantType();
					}
				}

				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SOPEN || _la==LT) {
					{
					setState(186);
					stereotype();
					}
				}

				setState(189);
				name();
				setState(191);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
				case 1:
					{
					setState(190);
					width();
					}
					break;
				}
				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS) {
					{
					setState(193);
					label();
					}
				}

				setState(197);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COLOR) {
					{
					setState(196);
					match(COLOR);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(199);
				stereotype();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(200);
				participantType();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StereotypeContext extends ParserRuleContext {
		public TerminalNode SOPEN() { return getToken(sequenceParser.SOPEN, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode SCLOSE() { return getToken(sequenceParser.SCLOSE, 0); }
		public TerminalNode GT() { return getToken(sequenceParser.GT, 0); }
		public TerminalNode LT() { return getToken(sequenceParser.LT, 0); }
		public StereotypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stereotype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).enterStereotype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sequenceParserListener ) ((sequenceParserListener)listener).exitStereotype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sequenceParserVisitor ) return ((sequenceParserVisitor<? extends T>)visitor).visitStereotype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StereotypeContext stereotype() throws RecognitionException {
		StereotypeContext _localctx = new StereotypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stereotype);
		int _la;
		try {
			setState(216);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,27,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(203);
				match(SOPEN);
				setState(204);
				name();
				setState(205);
				match(SCLOSE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(207);
				match(SOPEN);
				setState(208);
				name();
				setState(210);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==GT) {
					{
					setState(209);
					match(GT);
					}
				}
